--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="sorted">
         <h1>It's a collaborated work.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quas sed, nesciunt voluptatibus, sint blanditiis quibusdam minus consequatur, modi voluptatum nam dignissimos ex possimus! Quia consectetur commodi necessitatibus vitae autem!</p>
+        <img src="img/photo-1476514525535-07fb3b4ae5f1.avif" alt="photo">
     </div>
 </body>
 </html>
